@@ -1,3 +1,8 @@
+2004-04-14  Bastien Nocera  <hadess@hadess.net>
+
+	* autogen.sh: make it build with automake 1.8
+	* src/cd-drive.c: (linux_bsd_media_type): update from libbacon
+
 2004-04-13  Ross Burton  <ross@burtonini.com>
 
 	* configure.in:
